--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@feathersjs/feathers": "^3.3.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "helmet": "^3.18.0",
+    "puppeteer": "^1.18.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
