--- a/package.json
+++ b/package.json
@@ -34,11 +34,18 @@
     "@feathersjs/errors": "^3.3.6",
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
+    "aws-sdk": "^2.486.0",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "feathers-sequelize": "^4.1.1",
     "helmet": "^3.18.0",
+    "iconv": "^2.3.4",
+    "mysql2": "^1.6.5",
     "puppeteer": "^1.18.0",
+    "request-promise-native": "^1.0.7",
+    "sequelize": "^6.0.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   },
