--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
     "aws-sdk": "^2.486.0",
+    "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
