--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@feathersjs/errors": "^3.3.6",
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
+    "async": "^3.1.0",
     "aws-sdk": "^2.486.0",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
