--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "helmet": "^3.21.2",
         "iconv": "^2.3.4",
         "mysql2": "^1.6.5",
+        "node-cron": "^2.0.3",
         "puppeteer": "^1.18.0",
         "request-promise-native": "^1.0.7",
         "sequelize": "^5.21.5",
